# Sticky

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  check_errors.txt  fix_canvas_click.py  fix_canvas_snapshot.py  fix_tray.py  fix_whitespace.py  install.ps1  install.sh  new_constructed.rs  rewrite_constructed.py  rewrite_window.py  update_activate.py  update_canvas.py  update_corner.py  update_debounce.py  update_main.py  update_window_debounce.py
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml  rust.yml
assets/: sticky.desktop
docs/: FEATURES.md  ROADMAP.md
scripts/: validate_deb_install.sh
src/: canvas.rs  db.rs  main.rs  portals.rs  style.css  text_block.rs  window.rs
wix/: main.wxs
