[package]
name = "antigrav"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { package = "gtk4", version = "0.9", features = ["v4_10"] }
adw = { package = "libadwaita", version = "0.7" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ashpd = { version = "0.9", features = ["gtk4"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.19"
log = "0.4"
env_logger = "0.11"
gdk = { package = "gdk4", version = "0.9" }
gio = { package = "gio", version = "0.20" }
glib = { package = "glib", version = "0.20" }
