[package]
name = "sticky"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Modern floating sticky notes and infinite whiteboard for Linux"

[dependencies]
gtk = { package = "gtk4", version = "0.9", features = ["v4_10"] }
adw = { package = "libadwaita", version = "0.7" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ashpd = { version = "0.9", features = ["gtk4"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.19"
log = "0.4"
env_logger = "0.11"
gdk = { package = "gdk4", version = "0.9" }
gio = { package = "gio", version = "0.20" }
glib = { package = "glib", version = "0.20" }
evalexpr = "13.1.0"
reqwest = { version = "0.13.4", features = ["multipart", "json"] }
ksni = "0.2"

[package.metadata.deb]
maintainer = "Mrudula <mrudula@example.com>"
copyright = "2026 Mrudula"
license-file = []
depends = "$auto, libgtk-4-1, libadwaita-1-0, libsqlite3-0, speech-dispatcher, alsa-utils"
section = "utility"
priority = "optional"
assets = [
    ["target/release/sticky", "usr/bin/", "755"],
    ["assets/sticky.desktop", "usr/share/applications/", "644"],
    ["assets/sticky.png", "usr/share/icons/hicolor/256x256/apps/", "644"],
]
maintainer-scripts = "debian/"
